<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_3sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:fontFamily="@font/bubble"
                android:gravity="center"
                android:maxLines="2"
                android:text="Welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/tv_imp_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:fontFamily="@font/bubble"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text="@string/important_note"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bubble"
                    android:text="@string/welcome_message1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/link1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bubble"
                    android:text="@string/welcome_message2"
                    android:textColor="#0000EE"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/bubble"
                android:gravity="center"
                android:text="@string/welcome_message3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:background="@drawable/round_corner"
                    android:backgroundTint="#FF781E"
                    android:fontFamily="@font/bubble"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>