<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/lnRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/writing_btn_base"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/imgRate"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="2dp"
            android:src="@drawable/thumb_up"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_the_app"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/writing_btn_base"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="2dp"
            android:src="@drawable/share"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_the_app"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/writing_btn_base"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="2dp"
            android:src="@drawable/ic_apps"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_apps"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/writing_btn_base"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="2dp"
            android:src="@drawable/ic_mail"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>
