<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_splash_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBacks"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7sdp"
                android:adjustViewBounds="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/txtTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/bubble_soap"
                android:includeFontPadding="false"
                android:text="@string/bild_finden"
                android:textColor="@color/text_red"
                android:textSize="@dimen/_22ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgQue"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ostrich" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="....."
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=" "
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Strauß"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDer"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/find_the_word_btn_base"
                    android:gravity="center"
                    android:onClick="answer"
                    android:text="@string/der"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtDie"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/find_the_word_btn_base"
                    android:gravity="center"
                    android:onClick="answer"
                    android:text="@string/die"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtDas"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/find_the_word_btn_base"
                    android:gravity="center"
                    android:onClick="answer"
                    android:text="@string/das"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/next_btn"
                android:onClick="next"
                android:padding="7dp"
                android:src="@drawable/right_arrow"
                android:visibility="invisible" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/nativeFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <com.adsnativetamplete.ads.SmallNativeAdsView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.adsnativetamplete.ads.SmallNativeAdsView>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
