<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_splash_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBacks"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_7sdp"
                android:adjustViewBounds="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/txtTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/bubble_soap"
                android:includeFontPadding="false"
                android:text="@string/alphabete_lernen_text"
                android:textColor="@color/text_red"
                android:textSize="@dimen/_22ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgQue"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ostrich" />

            <TextView
                android:id="@+id/txtChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_the_correct_word"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/ln1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/find_the_word_btn_base"
                android:gravity="center"
                android:onClick="answer">

                <TextView
                    android:id="@+id/txtWord1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgSpeak1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/find_the_word_btn_for_sound"
                    android:onClick="imgSpeak"
                    android:src="@drawable/ic_speaker" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/find_the_word_btn_base"
                android:gravity="center"
                android:onClick="answer">

                <TextView
                    android:id="@+id/txtWord2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgSpeak2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/find_the_word_btn_for_sound"
                    android:onClick="imgSpeak"
                    android:src="@drawable/ic_speaker" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/find_the_word_btn_base"
                android:gravity="center"
                android:onClick="answer">

                <TextView
                    android:id="@+id/txtWord3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgSpeak3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/find_the_word_btn_for_sound"
                    android:onClick="imgSpeak"
                    android:src="@drawable/ic_speaker" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/find_the_word_btn_base"
                android:gravity="center"
                android:onClick="answer">

                <TextView
                    android:id="@+id/txtWordView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgSpeakView"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/find_the_word_btn_for_sound"
                    android:onClick="imgSpeak"
                    android:src="@drawable/ic_speaker" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/next_btn"
                android:onClick="next"
                android:padding="7dp"
                android:src="@drawable/right_arrow"
                android:visibility="invisible" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/nativeFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <com.adsnativetamplete.ads.SmallNativeAdsView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.adsnativetamplete.ads.SmallNativeAdsView>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
